--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "campaignchain/location-citrix",
     "description": "Holds information about a Citrix Location and user.",
+    "keywords": ["gotowebinar","campaignchain"],
     "type": "campaignchain-location",
     "license": "Apache-2.0",
     "authors": [
