CE-352 Clean up and prepare for 1.0.0-beta2 release

--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "campaignchain/location-citrix",
-    "description": "Holds information about a Citrix Location and user.",
+    "description": "Holds information about a GoToWebinar Location and Citrix user.",
     "keywords": ["gotowebinar","campaignchain"],
     "type": "campaignchain-location",
     "license": "Apache-2.0",
